--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>i18n 縮寫產生器</title>
+
+        <link rel="icon" href="favicon.ico" sizes="16x16" />
+        <link rel="icon" href="icon-32x32.png" sizes="32x32" />
+        
         <style>
             body {
                 font-family: Arial, sans-serif;
